# TinyClaw

./: Cargo.toml  README.md  tarpaulin-report.json
docs/: DESIGN.md  ITERATIONS.md  PLANS.md  PRINCIPLES.md  PROJECT.md
examples/: .env.example  admin.html  config.json
scripts/: install_service.sh  start.sh
src/: chat.rs  lib.rs  main.rs  preferences.rs  types.rs
src/agent/: client.rs  context.rs  context_advisor.rs  context_health.rs  context_manager.rs  context_summarizer.rs  conversation_summary.rs  error_recovery.rs  execution_safety.rs  feedback_trend.rs  memory.rs  memory_extractor.rs  mod.rs  performance_insights.rs  proactive_alerts.rs  retry.rs  runtime.rs  scheduled_task.rs  scheduler.rs  self_evaluation.rs  session_accomplishments.rs  session_notes.rs  session_profiles.rs  session_quality.rs  skill.rs  skill_manager.rs  skill_recommender.rs  skill_registry.rs  skill_synergy.rs  skill_tracker.rs  suggestion.rs  suggestion_manager.rs  task.rs  task_manager.rs  tool_pattern_learner.rs  tool_result_formatter.rs  tool_sequence_advisor.rs  tool_strategy.rs  tools.rs  turn_feedback.rs  (+3 more)
src/common/: error.rs  logging.rs  mod.rs
src/config/: hot_reload.rs  mod.rs  schema.rs
src/gateway/: auth.rs  events.rs  history.rs  messages.rs  mod.rs  persistence.rs  protocol.rs  queue.rs  server.rs  session.rs  session_ext.rs  streaming.rs  templates.rs
src/http/: mod.rs  routes.rs
src/metrics/: collector.rs  middleware.rs  mod.rs
src/persistence/: history.rs  mod.rs  sqlite.rs
src/plugins/: api.rs  loader.rs  manager.rs  mod.rs  traits.rs
src/tui/: app.rs  (+7 more)
(+2 files in other folders)
