[package]
name = "tiny_claw"
version = "4.7.0"
edition = "2021"
description = "A minimal implementation of OpenClaw in Rust"
authors = ["TinyClaw"]
license = "MIT"

[lib]
path = "src/lib.rs"
name = "tiny_claw"

[dev-dependencies]
tempfile = "3"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
thiserror = "2"
tokio-retry = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
http = "1"
async-trait = "0.1"
parking_lot = "0.12"
lazy_static = "1.4"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
ratatui = "0.28"
crossterm = "0.28"
async-stream = "0.3"
walkdir = "2"
glob = "0.3"
regex = "1"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.8"
